2003-04-05  Bruno Haible  <bruno@clisp.org>

	* config/install-reloc: Don't define NO_LIBRARIES.

2003-04-01  Bruno Haible  <bruno@clisp.org>

	* README.mingw: New file.
	* README.vms: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* README.woe32: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* config/config.libpath: New file.
	* config/install-reloc: New file.
	* config/reloc-ldflags: New file.
	* Makefile.am (EXTRA_DIST): Add them.
	* config/compile: New file, from automake-1.7.2.
	* INSTALL: Document --enable-relocatable and --with-libintl-prefix.

2003-02-27  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Include AC_CANONICAL_HOST, AC_ARG_ENABLE, AC_ARG_WITH,
	AC_ARG_VAR calls from the subdir configures.
	* Makefile.am (configure): Depend on each subdir's configure.ac.

2003-02-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ps, pdf): Remove rules, redundant with automake 1.7.2.

2003-02-18  Bruno Haible  <bruno@clisp.org>

	Fix the 2002-09-16 fix.
	* ltmain.sh (install): If "ln -s -f" fails (this is the case with
	/usr/bin/ln on Solaris 2.7), fall back to "rm && ln -s".

2003-02-18  Bruno Haible  <haible@clisp.cons.org>

	* config.guess, config.sub: Update to GNU version 2003-02-03.

2003-02-16  Bruno Haible  <bruno@clisp.org>

	Workaround autoconf >= 2.52 breakage.
	* config/m4/libtool.m4 (AC_LIBTOOL_ARG_WITH): New macro.
	(_LT_AC_LTCONFIG_HACK, AC_PROG_LD): Use it.

2003-02-12  Bruno Haible  <bruno@clisp.org>

	Big restructuring.
	* autoconf-lib-link: New subdirectory.
	* gettext-runtime: New subdirectory.
	* gettext-tools: New subdirectory.
	* config: New subdirectory.
	* configure.ac: New file.
	* Makefile.am: New file.