@@ -1,3 +1,7 @@
+2003-04-06  Bruno Haible  <bruno@clisp.org>
+
+	* config/install-reloc: Also compile progreloc.c.
+
 2003-04-05  Bruno Haible  <bruno@clisp.org>
 
 	* config/install-reloc: Don't define NO_LIBRARIES.
